BUG: 143754

Fixed using pattern checking, it's been working great all day and made it easy to modify.


svn path=/branches/KDE/3.5/kdelibs/; revision=676516